files name updated and module added in settings

--- a/dispatch/views/stock_picking_batch_inherit.xml
+++ b/dispatch/views/stock_picking_batch_inherit.xml
@@ -8,8 +8,8 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='scheduled_date']" position="after">
                 <field name="dock" />
-                <field name="vehicle" />
-                <field name="category" />
+                <field name="vehicle" placeholder='Opel GJ45XC1234'/>
+                <field name="category" placeholder='Semi Truck (250 kg,30 m^3)'/>
                 <field name="weight" widget="progressbar"/>
                 <field name="volume" widget="progressbar"/>
             </xpath>
@@ -27,9 +27,10 @@
                 scales="day,week,month,year"
                 string="Batch Gantt View"
                 color="dock"
-                decoration-info="state in ['draft', 'done']"
-                pill_label = "True"
-                default_group_by="dock,vehicle">
+                decoration-info="state in ['draft']"
+                pill_label="True"
+                default_group_by="dock,vehicle"
+                >
                 <field name="state"/>
                 <field name="category"/>
                 <!-- <field name="partner_image" widget="image" class="oe_avatar"/> -->
@@ -42,7 +43,7 @@
         <field name="model">stock.picking.batch</field>
         <field name="arch" type="xml">
             <graph string="Batch Transfer" >
-                <field name="scheduled_date"/>
+                <field name="scheduled_date" interval="day" />
                 <field name="category"/>
             </graph>
         </field>
